# aerie

./: README.md
bench/: .gitignore
bench/filebench-config/: fileserver-pxfs.f  fileserver-scm.f  randomread.f  varmail-pxfs.f  varmail-scm.f  webproxy-kvfs.f  webproxy-pxfs.f  webproxy-scm.f  webserver-pxfs.f  webserver-scm.f
bench/filebench-kvs/: Makefile  Makefile.in  README.AERIE  cheader.h  config.status  configure  configure.sh  cscope.out  fb_localfs.c  filebench-pxfs.rst  fileset.c  flowop.c  flowop_library.c  fsplug.h  ipc.c  ipc.h  kvs.c  kvs.h  parser_gram.c  parser_gram.h  parser_gram.y  procflow.c  run.sh  stats.c  test.f  threadflow.h  web-iter.sh  web-pxfs.rst
bench/filebench-pxfs/: Makefile  Makefile.in  a.out  cheader.h  config.h  config.h.in  config.status  configure  configure.sh  fb_localfs.c  fb_localfs.c~  fileset.c  fileset.h  flowop.c  flowop_library.c  fsplug.h  gotcha  ipc.h  libfs-filebench.sh  libfs.ini  parser_gram.c  parser_gram.h  parser_gram.y  procflow.c  scmbreakdown_1  stats.c  threadflow.h
bench/filebench-scmdisk/: Makefile  config.h  config.status  fileset.c  flowop.c  flowop_library.c  ipc.c  ipc.h  parser_gram.c  parser_lex.c  scmdisk-results.txt  scmdisk-script.sh  scmdiskd-script.sh  stats.c  threadflow.h
bench/kvzone-kvfs/: COPYING  Makefile-old  Makefile.in  autogen.sh  configure  kvzone-0.9.tar.bz2  kvzone.spec
bench/kvzone-pxfs/: Makefile  Makefile.am  README  aclocal.m4  config.status  configure.ac  libtool
bench/kvzone-pxfs/src/include/keyValueStore/: keyValueStore.h  keyValueStoreTypes.h  kvStoreQueue.h  localKeyValueStore.h
bench/kvzone-pxfs/src/include/util/: boostTime.h  misc.h  types.h
bench/kvzone-pxfs/src/main/keyValueStore/: blockingMultiQueue.cpp  localKeyValueStore.cpp  syncKeyValueStore.cpp  workersQueue.cpp
bench/kvzone-pxfs/src/main/keyValueStore/adapters/berkeleyDB/cds/: berkeleyDBAdapter.h
bench/kvzone-pxfs/src/main/keyValueStore/adapters/memMap/.deps/: memMap.Plo
bench/kvzone-pxfs/src/main/keyValueStore/adapters/noop/: noopAdapter.cpp  noopAdapter.h
bench/kvzone-pxfs/src/main/keyValueStore/adapters/noop/.deps/: noopAdapter.Plo
bench/kvzone-pxfs/src/main/keyValueStore/adapters/sqlite/: sqliteAdapter.cpp  sqliteAdapter.h
bench/kvzone-pxfs/src/main/keyValueStore/adapters/sqlite/.deps/: libsqliteAdapter_la-sqliteAdapter.Plo
bench/kvzone-pxfs/src/main/keyValueStore/adapters/sqlite/unittests/sqliteAdapterTest/: sqliteAdapterTest.cpp
bench/kvzone-pxfs/src/main/keyValueStore/adapters/tokyoCabinet/: tokyoCabinetAdapter.h
bench/kvzone-pxfs/src/main/keyValueStore/adapters/tokyoCabinet/.deps/: libtokyoCabinetAdapter_la-tokyoCabinetAdapter.Plo
bench/kvzone-pxfs/src/main/kvzone/: kvzone.cpp
bench/kvzone-pxfs/src/main/kvzone/.deps/: kvzone.Po
bench/kvzone-pxfs/src/main/simpleClient/: simpleClient.cpp
bench/kvzone-pxfs/src/main/util/: exceptions.cpp  hrFastTime.cpp  hrFastTimeThread.cpp  misc.cpp  tsc.cpp  tsc.h
bench/kvzone-pxfs/src/main/util/.deps/: hrFastTimeThread.Plo  string.Plo
bench/stat/: hrtime.h  measure_stat.c  time.h
bench/sysbench-0.4.12/: ChangeLog  Makefile.in  configure
bench/ubench/: Makefile  a.out  gmon.out  hrtime.h  libfs.ini  lopen  lopen.c  open  open.c  out.txt
kernelmode/linux-3.2.2/: arch  drivers  include  kernel  mm
kernelmode/linux-3.2.2-sankar-patch/: .config
kernelmode/scmdisk/: Makefile  README  brd.c  dev.sh  fs-ext2.sh  fs.sh  scm.c  scm.h  scmdisk.h  scmdiskctl.c
kernelmode/scmmodel/: scm.h
kernelmode/tools/: alloc_call.c  change_prot.c  cheader.h  child.c  mmap_area_test.c  mmap_inherit.c  offline_blocks.sh  offline_removable.sh  read_phypage.c  reader.c  removable_memblock.sh  sreader.c  swriter.c  timer.c  tlbtest.TLB-miss-latency.data  tlbtest.TLB-miss-latency.gp  tlbtest.cache-miss-latency.data  tlbtest.cache-miss-latency.gp  tlbtest.cache-replace-time.data  tlbtest.cache-replace-time.gp  writer.c  zz.c
libfs/: .gitignore  Doxyfile  README  SConstruct  TODO  cleanup.sh  clt01  clt02  clt03  doxypage  fkill  kvfs_server.sh  libfs.ini  pxfs_server.sh  run.sh  run_sharing.sh  run_ubench.sh  skill.sh  start_server.sh
libfs/bench/: README  SConscript
libfs/chunkstore/: SConscript  chunkdsc.h  chunkserver.cc  chunkserver.h  chunkstore.cc  chunkstore.h  registryserver.cc
libfs/client/: SConscript  backend.h  c_api.cc  c_api.h  client.cc  client_i.h  const.h  extentpool.cc  extentpool.h  file.cc  file.h  fs.cc  fs.h  icache.cc  icache.h  imap.h  imgr.h  (+17 more)
(+1527 files in other folders)
